grid starts at start of templates and scroll locks to template in center, issue with gap size still being explored

--- a/express/code/scripts/widgets/basic-carousel.css
+++ b/express/code/scripts/widgets/basic-carousel.css
@@ -377,9 +377,9 @@
   .template-x.basic-carousel.grid .basic-carousel-platform {
     display: grid;
     grid-template-rows: repeat(2, 207px);
-    grid-auto-flow: column dense;
     grid-auto-columns: 143px;
     height: 500px;
     padding-top: 80px;
+    gap: 10px;
   }
 }
